Remove machine-learning-packages feature

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
       "configureJupyterlabAllowOrigin": "*",
       "useOryxIfAvailable": "false"
     },
-    "./local-features/machine-learning-packages": "latest",
+    // "./local-features/machine-learning-packages": "latest",
     // "ghcr.io/devcontainers/features/php:1": {
     //   "version": "8.2.1",
     //   "additionalVersions": "8.1.14",
