--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,3 @@
----
 site_url: https://github.com/pages/githubuniverseworkshops/github-devsecops-fundamentals
 site_name: GitHub DevSecOps Fundamental
 site_author: Igwe Kalu <igwejk@github.com>
@@ -19,20 +18,20 @@ theme:
   locale: en
   palette:
     # Palette toggle for automatic mode
-    - media: "(prefers-color-scheme)"
+    - media: '(prefers-color-scheme)'
       toggle:
         icon: material/brightness-auto
         name: Switch to light mode
 
     # Palette toggle for light mode
-    - media: "(prefers-color-scheme: light)"
+    - media: '(prefers-color-scheme: light)'
       scheme: default
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
 
     # Palette toggle for dark mode
-    - media: "(prefers-color-scheme: dark)"
+    - media: '(prefers-color-scheme: dark)'
       scheme: slate
       toggle:
         icon: material/brightness-4
@@ -52,7 +51,7 @@ markdown_extensions:
       guess_lang: false
   - toc:
       permalink: true
-      separator: "-"
+      separator: '-'
   - def_list
   - footnotes
   - meta
@@ -83,11 +82,11 @@ markdown_extensions:
   - pymdownx.tilde
 
 extra_javascript:
-  - javascripts/config.js
+  - js/config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js
-  - javascripts/tables.js
+  - js/tables.js
 
 nav:
   - index.md
