--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
-FROM mcr.microsoft.com/devcontainers/python:3
+FROM mcr.microsoft.com/devcontainers/universal:linux
 
 LABEL org.opencontainers.image.authors="igwejk@github.com"
 LABEL org.opencontainers.image.source="https://github.com/githubuniverseworkshops/github-devsecops-fundamentals"
 
 COPY requirements.txt /tmp/pip-tmp/
-RUN pip3 --disable-pip-version-check --no-cache-dir install --requirement /tmp/pip-tmp/requirements.txt && rm -rf /tmp/pip-tmp
+# RUN pip3 --disable-pip-version-check --no-cache-dir install --requirement /tmp/pip-tmp/requirements.txt && rm -rf /tmp/pip-tmp
