--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,4 @@
 {
-  "name": "Dev Container",
   "build": {
     "dockerfile": "./Dockerfile",
     "context": ".."
@@ -11,24 +10,24 @@
       "userGid": "1000"
     },
     // "ghcr.io/devcontainers/features/dotnet:1": {
-    //     "version": "7.0.306",
-    //     "installUsingApt": "false",
-    //     "additionalVersions": "6"
+    //   "version": "7.0.306",
+    //   "installUsingApt": "false",
+    //   "additionalVersions": "6"
     // },
     // "ghcr.io/devcontainers/features/hugo:1": {
-    //     "version": "latest"
+    //   "version": "latest"
     // },
     // "ghcr.io/devcontainers/features/node:1": {
-    //     "version": "20",
-    //     "additionalVersions": "18"
+    //   "version": "20",
+    //   "additionalVersions": "18"
     // },
     // "./local-features/nvs": "latest",
     "ghcr.io/devcontainers/features/python:1": {
-      "version": "3.10.8",
-      "additionalVersions": "3.9.16",
-      "installJupyterlab": "true",
-      "configureJupyterlabAllowOrigin": "*",
-      "useOryxIfAvailable": "false"
+      "version": "3.11"
+      // "additionalVersions": "3.9.16",
+      // "installJupyterlab": "true",
+      // "configureJupyterlabAllowOrigin": "*",
+      // "useOryxIfAvailable": "false"
     },
     // "./local-features/machine-learning-packages": "latest",
     // "ghcr.io/devcontainers/features/php:1": {
@@ -153,17 +152,17 @@
       },
       // Add the IDs of extensions you want installed when the container is created.
       "extensions": [
-		"GitHub.vscode-pull-request-github",
-		"ms-azuretools.vscode-docker",
-		"github.vscode-github-actions",
-		"ms-python.python",
-		"esbenp.prettier-vscode",
-		"ms-python.flake8",
-		"ms-python.black-formatter",
-		"ms-python.mypy-type-checker",
-		"ms-python.pylint",
-		"ms-python.vscode-pylance"
-	]
+        "GitHub.vscode-pull-request-github",
+        "ms-azuretools.vscode-docker",
+        "github.vscode-github-actions",
+        "ms-python.python",
+        "esbenp.prettier-vscode",
+        "ms-python.flake8",
+        "ms-python.black-formatter",
+        "ms-python.mypy-type-checker",
+        "ms-python.pylint",
+        "ms-python.vscode-pylance"
+      ]
     }
   }
 }
