Specifically support only linux/amd64 platform for now

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/universal:2
+FROM --platform=linux/amd64 mcr.microsoft.com/devcontainers/universal:2
 
 LABEL org.opencontainers.image.authors="igwejk@github.com"
 LABEL org.opencontainers.image.source="https://github.com/githubuniverseworkshops/github-devsecops-fundamentals"
