--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,5 +7,5 @@ COPY .devcontainer/first-run-notice.txt /tmp/scripts/
 RUN mkdir -p "/usr/local/etc/vscode-dev-containers/"    \
     && mv -f /tmp/scripts/first-run-notice.txt /usr/local/etc/vscode-dev-containers/
 
+COPY requirements.txt /tmp/pip-tmp/
 ENV REQUIREMENTS_TXT=/tmp/pip-tmp/requirements.txt
-COPY requirements.txt ${REQUIREMENTS_TXT}
