--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,3 +96,4 @@ nav:
       - Version Control: Version-Control/index.md
       - Securing the Software Supply Chain: Software-Supply-Chain/index.md
       - Release Automation: Release-Automation/index.md
+  - Tetris: Tetris/index.html
