--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 # https://squidfunk.github.io/mkdocs-material/getting-started/#with-pip
 mkdocs-material
 mkdocs-macros-plugin
+mkdocs-minify-plugin
+mkdocs-redirects
+nodeenv
