--- a/.github/workflows/continuous.integration.preliminary.yml
+++ b/.github/workflows/continuous.integration.preliminary.yml
@@ -1,52 +1,79 @@
+# This workflow is named "Preliminary Checks"
 name: Preliminary Checks
 
+# This workflow gets triggered on pull requests to the main branch and on workflow calls
 on:
   pull_request:
     branches: [main]
   workflow_call: {}
 
+# This workflow has read permissions for the contents
 permissions:
   contents: read
 
+# This workflow consists of a single job named "lint-analyze-and-test-pass-01"
 jobs:
   lint-analyze-and-test-pass-01:
+    # This job runs on the latest version of Ubuntu
     runs-on: ubuntu-latest
 
+    # The steps that this job will execute
     steps:
+      # This step checks out the repository
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      # This step sets up Python 3.11
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+
+      # This step installs the Python dependencies needed for CI
       - name: Install CI Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ui/requirements.ci.txt
+
+      # This step reviews the dependencies
       - name: "Dependency Review"
         uses: actions/dependency-review-action@v3
         with:
           config-file: >-
             ./.github/dependency-review-config.yml
+
+      # This step lints the Python source code
       - name: Lint Python source
         run: |
           ruff check --format=github --select=E9,F63,F7,F82 --target-version=py311 .
+
+      # This step runs CodeQL analysis
       - name: Run CodeQL analysis
         uses: ./.github/actions/codeql-analysis
+
+      # This step runs unit and integration tests
       - name: Run unit and integration tests
         run: |
           pytest --cov=ui/src ui/tests
+
+      # This step sets up GitHub Pages
       - name: Setup GitHub Pages
         uses: actions/configure-pages@v3
+
+      # This step builds GitHub Pages
       - name: Build GitHub Pages
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./docs
           destination: ./_site
+
+      # This step uploads the GitHub Pages artifact
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./_site
+
+      # This step deploys to GitHub Pages (currently commented out)
       # - name: Deploy to GitHub Pages
       #   id: deployment
       #   uses: actions/deploy-pages@v2
