--- a/.github/workflows/continuous.integration.preliminary.yml
+++ b/.github/workflows/continuous.integration.preliminary.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install CI Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ui/requirements.ci.txt
+          pip install -r requirements.txt
 
       # This step reviews the dependencies
       - name: "Dependency Review"
