--- a/.github/dependency-review-config.yml
+++ b/.github/dependency-review-config.yml
@@ -1,12 +1,12 @@
 # Possible values: "critical", "high", "moderate", "low"
-fail-on-severity: moderate
+fail-on-severity: critical
 # You can only include one of these two options: `allow-licenses` and `deny-licenses`
 # ([String]). Only allow these licenses (optional)
 # Possible values: Any `spdx_id` value(s) from https://docs.github.com/en/rest/licenses
-# allow-licenses:
+allow-licenses:
 #   - GPL-3.0
 #   - BSD-3-Clause
-#   - MIT
+  - MIT
 
 # ([String]). Block the pull request on these licenses (optional)
 # Possible values: Any  `spdx_id` value(s) from https://docs.github.com/en/rest/licenses
