--- a/.github/workflows/continuous.integration.preliminary.yml
+++ b/.github/workflows/continuous.integration.preliminary.yml
@@ -48,11 +48,6 @@ jobs:
       #     config-file: >-
       #       ./.github/dependency-review-config.yml
 
-      # This step lints the Python source code
-      - name: Lint Python source
-        run: |
-          ruff check --format=github --select=E9,F63,F7,F82 --target-version=py311 .
-
       # This step runs CodeQL analysis
       - name: Run CodeQL analysis
         uses: ./.github/actions/codeql-analysis
@@ -63,21 +58,21 @@ jobs:
           pytest --cov=ui/src ui/tests
 
       # This step sets up GitHub Pages
-      - name: Setup GitHub Pages
-        uses: actions/configure-pages@v3
+      # - name: Setup GitHub Pages
+      #   uses: actions/configure-pages@v3
 
-      # This step builds GitHub Pages
-      - name: Build GitHub Pages
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./docs
-          destination: ./_site
+      # # This step builds GitHub Pages
+      # - name: Build GitHub Pages
+      #   uses: actions/jekyll-build-pages@v1
+      #   with:
+      #     source: ./docs
+      #     destination: ./_site
 
-      # This step uploads the GitHub Pages artifact
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./_site
+      # # This step uploads the GitHub Pages artifact
+      # - name: Upload GitHub Pages artifact
+      #   uses: actions/upload-pages-artifact@v1
+      #   with:
+      #     path: ./_site
 
       # This step deploys to GitHub Pages (currently commented out)
       # - name: Deploy to GitHub Pages
