--- a/.github/workflows/continuous.delivery.yml
+++ b/.github/workflows/continuous.delivery.yml
@@ -14,13 +14,19 @@ permissions:
   packages: write
 
 jobs:
-  package:
-    uses: ./.github/workflows/package.yml
-    with:
-      publish: true
-      package-name: ${{ github.event.repository.owner.login }}
-      package-namespace: ${{ github.event.repository.name }}
-      package-registry: ghcr.io
-    secrets:
-      package-registry-owner: ${{ github.event.repository.owner.login }}
-      package-registry-token: ${{ secrets.GITHUB_TOKEN }}
+  package-delivery:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Setup GitHub Pages
+      uses: actions/configure-pages@v3
+    - name: Build GitHub Pages
+      uses: actions/jekyll-build-pages@v1
+      with:
+        source: ./docs
+        destination: ./_site
+    - name: Upload GitHub Pages artifact
+      uses: actions/upload-pages-artifact@v1
+      with:
+        path: ./_site
