update workflow version

--- a/.github/workflows/continuous.delivery.yml
+++ b/.github/workflows/continuous.delivery.yml
@@ -6,7 +6,9 @@ on:
       - "*pre-release*"
     branches:
       - main
-      - lab-2
+  pull_request:
+    branches:
+      - main
   workflow_dispatch: {}
 
 permissions:
