update workflow version

--- a/.github/dependency-review-config.yml
+++ b/.github/dependency-review-config.yml
@@ -1,5 +1,5 @@
 # Possible values: "critical", "high", "moderate", "low"
-# fail-on-sseverity: critical
+fail-on-sseverity: critical
 # You can only include one of these two options: `allow-licenses` and `deny-licenses`
 # ([String]). Only allow these licenses (optional)
 # Possible values: Any `spdx_id` value(s) from https://docs.github.com/en/rest/licenses
