Update release action version

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -67,6 +67,6 @@ jobs:
       # Prepend a 'v' to the beginning (e.g. 'v1.2.3')
       - name: Create Release
         id: create-release
-        uses: issue-ops/releaser@main
+        uses: issue-ops/releaser@v0.1.2
         with:
           tag: v${{ steps.tag.outputs.version }}
