--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ nox = "^2023.4.22"
 mkdocs-macros-plugin = "^1.0.4"
 mkdocs-minify-plugin = "^0.7.1"
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.17.6"
+
 [tool.isort]
 profile = "black"
 
