--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ mkdocs-minify-plugin = "^0.7.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.6"
+pytest = "^7.4.2"
 
 [tool.isort]
 profile = "black"
