--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,16 @@ readme = "README.md"
 python = "^3.11"
 mkdocs = "^1.5.3"
 mkdocs-material = "^9.4.2"
-black = "^23.9.1"
-nox = "^2023.4.22"
 mkdocs-macros-plugin = "^1.0.4"
 mkdocs-minify-plugin = "^0.7.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.6"
 pytest = "^7.4.2"
+coverage = "^7.3.1"
+black = "^23.9.1"
+nox = "^2023.4.22"
+coverage-badge = "^1.1.0"
 
 [tool.isort]
 profile = "black"
