--- a/.github/dependency-review-config.yml
+++ b/.github/dependency-review-config.yml
@@ -1,13 +1,13 @@
 # Possible values: "critical", "high", "moderate", "low"
-fail-on-sseverity: critical
+fail-on-severity: moderate
+
 # You can only include one of these two options: `allow-licenses` and `deny-licenses`
 # ([String]). Only allow these licenses (optional)
 # Possible values: Any `spdx_id` value(s) from https://docs.github.com/en/rest/licenses
 allow-licenses:
-#   - GPL-3.0
-#   - BSD-3-Clause
   - MIT
-
+  - GPL-3.0
+  - BSD-3-Clause
 # ([String]). Block the pull request on these licenses (optional)
 # Possible values: Any  `spdx_id` value(s) from https://docs.github.com/en/rest/licenses
 # deny-licenses:
@@ -22,6 +22,7 @@ allow-licenses:
 
 # ([String]). Block pull requests that introduce vulnerabilities in the scopes that match this list (optional)
 # Possible values: "development", "runtime", "unknown"
-# fail-on-scopes:
-#   - development
-#   - runtime
+fail-on-scopes:
+  - development
+  - runtime
+  - unknown
