--- a/.github/workflows/01.continuous.integration.yml
+++ b/.github/workflows/01.continuous.integration.yml
@@ -13,7 +13,6 @@ permissions:
 
 env:
   CI: 1
-  TETRIS_APP_PORT: 8000
 
 jobs:
   run-checks:
@@ -35,8 +34,6 @@ jobs:
           pip install -r requirements.ci.txt
       - name: Install NodeJS dependencies
         run: npm ci
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
       # ========================================================================
       # Run lints
       # ========================================================================
@@ -46,14 +43,8 @@ jobs:
       # ========================================================================
       # Run tests
       # ========================================================================
-      - name: Run UI test
-        run: npx playwright test
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+      - name: Run unit and integration tests
+        run: npm test
       # ========================================================================
       # Run compliance checks
       # ========================================================================
