Add Copilot extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,9 @@
         "ms-python.pylint",
         "ms-python.vscode-pylance",
         "ms-vsliveshare.vsliveshare",
-        "ms-playwright.playwright"
+        "ms-playwright.playwright",
+        "GitHub.copilot-chat",
+        "GitHub.copilot"
       ]
     }
   }
