--- a/.github/workflows/01.1.continuous.integration.yml
+++ b/.github/workflows/01.1.continuous.integration.yml
@@ -4,8 +4,6 @@ on:
   pull_request:
     branches:
       - main
-  merge_group:
-    types: [checks_requested]
   workflow_call: {}
 
 permissions:
@@ -17,7 +15,7 @@ env:
   CI: 1
   SITE_DIR: _site
   TETRIS_APP_HOST: "127.0.0.1"
-  TETRIS_APP_PORT: "8000"
+  TETRIS_APP_PORT: "8080"
   TETRIS_APP_PATH: "pages/githubuniverseworkshops/github-devsecops-fundamentals"
 
 jobs:
@@ -40,6 +38,11 @@ jobs:
       - name: Lint Python source
         run: |
           ruff check --format=github --select=E9,F63,F7,F82 --target-version=py311 .
+  security-checks:
+    runs-on: ubuntu-latest
+    needs: run-checks
+    steps:
+      - uses: actions/checkout@v3
       - name: Run unit and integration tests
         run: npm test
       - name: Dependency Review
@@ -54,32 +57,3 @@ jobs:
           setup-python-dependencies: "false"
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
-  run-acceptance:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.ci.txt
-      - name: Build site
-        run: |
-          mkdocs build --clean --verbose --site-dir '${{ env.SITE_DIR }}'
-      - name: Install NodeJS dependencies
-        run: npm ci
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-      - name: Run UI test
-        run: npx playwright test
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
