--- a/.github/workflows/03.package.yml
+++ b/.github/workflows/03.package.yml
@@ -1,10 +1,9 @@
 name: Package Delivery Artifacts
 
 on:
-  release:
-    types:
-      - prereleased
-      - released
+  pull_request:
+    branches:
+      - main
   workflow_dispatch: {}
   workflow_call:
     inputs:
