--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,6 +94,10 @@ nav:
   - Labs:
       - Value Stream Management: Value-Stream-Management/index.md
       - Version Control: Version-Control/index.md
+          - Version-Control/collaborate.md
+          - Version-Control/implement-features.md
+          - Version-Control/prerequisites.md
+          - Version-Control/setup.md
       - Securing the Software Supply Chain: Software-Supply-Chain/index.md
       - Release Automation: Release-Automation/index.md
   - Tetris: Tetris/index.html
