--- a/.github/workflows/01.1.continuous.integration.yml
+++ b/.github/workflows/01.1.continuous.integration.yml
@@ -43,6 +43,10 @@ jobs:
     needs: run-checks
     steps:
       - uses: actions/checkout@v3
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.ci.txt
       - name: Run unit and integration tests
         run: npm test
       - name: Dependency Review
