--- a/.github/workflows/01.1.continuous.integration.yml
+++ b/.github/workflows/01.1.continuous.integration.yml
@@ -43,14 +43,6 @@ jobs:
     needs: run-checks
     steps:
       - uses: actions/checkout@v3
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.ci.txt
-      - name: Run unit and integration tests
-        run: |
-          npm install -D @playwright/test
-          npm test
       - name: Dependency Review
         uses: actions/dependency-review-action@v3
         with:
@@ -63,3 +55,21 @@ jobs:
           setup-python-dependencies: "false"
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
+  test:
+    runs-on: ubuntu-latest
+    needs: security-checks
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.ci.txt
+      - name: Run unit and integration tests
+        run: |
+          npm install -D @playwright/test
+          npm test
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        if: success() || failure() # always run even if the previous step fails
+        with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
