add playwright to reuirements.txt

--- a/.github/workflows/01.1.continuous.integration.yml
+++ b/.github/workflows/01.1.continuous.integration.yml
@@ -57,7 +57,7 @@ jobs:
         uses: github/codeql-action/analyze@v2
   test:
     runs-on: ubuntu-latest
-    needs: security-checks
+    needs: run-checks
     steps:
       - uses: actions/checkout@v3
       - name: Install Python dependencies
