--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # https://squidfunk.github.io/mkdocs-material/getting-started/#with-pip
+mkdocs
 mkdocs-material
 mkdocs-macros-plugin
 mkdocs-minify-plugin
