--- a/.github/workflows/01.1.continuous.integration.yml
+++ b/.github/workflows/01.1.continuous.integration.yml
@@ -48,7 +48,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: Install dependencies
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.ci.txt
+      - name: Install node dependencies
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
