--- a/.github/workflows/01.1.continuous.integration.yml
+++ b/.github/workflows/01.1.continuous.integration.yml
@@ -19,7 +19,7 @@ env:
   TETRIS_APP_PATH: "pages/githubuniverseworkshops/github-devsecops-fundamentals"
 
 jobs:
-  run-checks:
+  quality-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -40,7 +40,6 @@ jobs:
           ruff check --format=github --select=E9,F63,F7,F82 --target-version=py311 .
   security-checks:
     runs-on: ubuntu-latest
-    needs: run-checks
     steps:
       - uses: actions/checkout@v3
       - name: Run unit and integration tests
