--- a/.github/workflows/01.2.continuous.integration.yml
+++ b/.github/workflows/01.2.continuous.integration.yml
@@ -28,20 +28,21 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-      - name: Install Python dependencies
+      - name: Install Python Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.ci.txt
-      - name: Build site
+      - name: Install NodeJS Dependencies
+        run: npm ci
+      - name: Test Site Build
         run: |
           mkdocs build --clean --verbose --site-dir '${{ env.SITE_DIR }}'
-      - name: Install NodeJS dependencies
-        run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-      - name: Run UI test
+      - name: Run UI Test
         run: npx playwright test
-      - uses: actions/upload-artifact@v3
+      - name: Upload UI Test Report
+        uses: actions/upload-artifact@v3
         if: always()
         with:
           name: playwright-report
