Add site build step in checks and acceptance test

--- a/.github/workflows/01.1.continuous.integration.yml
+++ b/.github/workflows/01.1.continuous.integration.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Lint Python source
         run: |
           ruff check --format=github --select=E9,F63,F7,F82 --target-version=py311 .
+      - name: Test Site Build
+        run: |
+          mkdocs build --clean --strict --verbose --site-dir '${{ env.SITE_DIR }}'
   security-checks:
     runs-on: ubuntu-latest
     steps:
