--- a/.github/workflows/04.continuous.deployment.yml
+++ b/.github/workflows/04.continuous.deployment.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch: {}
 
 concurrency:
-  group: production-deplyment
+  group: production-deployment
   cancel-in-progress: false
 
 permissions:
