--- a/.github/workflows/03.extra.container.image.packaging.yml
+++ b/.github/workflows/03.extra.container.image.packaging.yml
@@ -14,18 +14,11 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      # Get lowercase repo name
-      - name: downcase REPO
-        run: |
-          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-
       # Connect to GitHub Container Registry (ghcr)
       - name: Login to GitHub Container Registry
-        uses: azure/docker-login@v1
+        uses: docker/login-action@v3
         with:
-          login-server: ghcr.io
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -34,4 +27,4 @@ jobs:
         with:
           push: true
           context: ${{ github.workspace }}
-          tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
+          tags: ${{ github.repository }}:${{ github.sha }}
