--- a/.github/workflows/03.extra.container.image.packaging.yml
+++ b/.github/workflows/03.extra.container.image.packaging.yml
@@ -14,6 +14,8 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       # Connect to GitHub Container Registry (ghcr)
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
