--- a/.github/workflows/03.extra.container.image.packaging.yml
+++ b/.github/workflows/03.extra.container.image.packaging.yml
@@ -10,6 +10,7 @@ permissions:
   contents: read
   packages: write
 
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -29,4 +30,4 @@ jobs:
         with:
           push: true
           context: ${{ github.workspace }}
-          tags: ${{ github.repository }}:${{ github.sha }}
+          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
