--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,7 @@
   "forwardPorts": [
     8000
   ],
+  "postCreateCommand": "python3 -m pip install --requirement requirements.txt",
   // Configure tool-specific properties.
   "customizations": {
     // Configure properties specific to VS Code.
