--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,14 +9,23 @@ remote_branch: gh-pages
 
 # edit_uri: blob/main/docs/
 edit_uri: edit/main/docs/
-repo_url: https://github.com/githubuniverseworkshops/github-devsecops-fundamentals/
-repo_name: GitHub
+
+repo_url: https://github.com/githubuniverseworkshops/github-devsecops-fundamentals
+
+repo_name: gh-devsecops-fundamentals
 
 theme:
   name: material
+
   icon:
     logo: simple/githubactions
+    # edit: material/pencil
+    # view: material/eye
+
+  favicon: assets/img/favicon.ico
+
   locale: en
+
   palette:
     # Palette toggle for dark mode
     - scheme: slate
@@ -38,8 +47,20 @@ theme:
     #     name: Switch to system preference
     #   media: "(prefers-color-scheme: light)"
 
+  features:
+    - content.action.edit
+    - content.action.view
+    - content.code.copy
+    - content.tooltips
+    - navigation.expand
+    - navigation.footer
+    - navigation.indexes
+    - navigation.sections
+    - navigation.tabs
+
 plugins:
   - search
+
   - minify:
       minify_html: true
 
@@ -47,52 +68,76 @@ markdown_extensions:
   - abbr
   - admonition
   - attr_list
+  - md_in_html
+
   - codehilite:
       linenums: true
       guess_lang: false
+
   - toc:
       permalink: true
       separator: "-"
+
   - def_list
   - footnotes
   - meta
-  - pymdownx.arithmatex
+
   - pymdownx.betterem:
       smart_enable: all
+
   - pymdownx.caret
+
   - pymdownx.critic:
       mode: view
+
   - pymdownx.details
+
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+
   - pymdownx.highlight:
       linenums: true
+
   - pymdownx.inlinehilite
   - pymdownx.keys
   - pymdownx.magiclink
   - pymdownx.mark
   - pymdownx.smartsymbols
   - pymdownx.snippets
-  - pymdownx.superfences
+
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+
   - pymdownx.tabbed:
       alternate_style: true
+
   - pymdownx.tasklist:
       custom_checkbox: true
       clickable_checkbox: true
+
   - pymdownx.tilde
 
 extra_javascript:
-  - javascripts/config.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-  - https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js
-  - javascripts/tables.js
+  # KATEX
+  - assets/javascripts/katex.js
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
+  # Sortable table
+  - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
+  - assets/javascripts/tables.js
+
+extra_css:
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
 
 nav:
-  - index.md
+  - GitHub Platform: index.md
   - Labs Instructions:
-      - Version-Control/index.md
-      - Software-Supply-Chain/index.md
-      - Release-Automation/index.md
-  - Tetris Game: Tetris/index.html
+      - Introduction: Labs-Instructions/index.md
+      - Labs-Instructions/Version-Control/index.md
+      - Labs-Instructions/Software-Supply-Chain/index.md
+      - Labs-Instructions/Release-Automation/index.md
+  # - Tetris Game: Tetris/index.html
