--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,9 +8,8 @@
     "dockerfile": "./Dockerfile",
     "context": ".."
   },
-  "postAttachCommand": "python -m mkdocs serve --dev-addr 127.0.0.1:8000",
+  "postAttachCommand": "python -m mkdocs serve --dev-addr 127.0.0.1:8080",
   "forwardPorts": [
-    8000,
     8080
   ],
   "customizations": {
@@ -37,6 +36,12 @@
     "ghcr.io/devcontainers/features/git:1": {
       "ppa": true,
       "version": "latest"
+    }
+  },
+  "portsAttributes": {
+    "8080": {
+      "label": "Site",
+    
     }
   }
 }
