Draft labs introduction

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,4 +140,4 @@ nav:
       - Labs-Instructions/Version-Control/index.md
       - Labs-Instructions/Software-Supply-Chain/index.md
       - Labs-Instructions/Release-Automation/index.md
-  # - Tetris Game: Tetris/index.html
+  - Tetris Game: Tetris/index.html
