--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,7 +137,13 @@ nav:
   - index.md
   - Labs Instructions:
       - Introduction: Labs-Instructions/index.md
-      - Labs-Instructions/Collaboration/index.md
-      - Labs-Instructions/Software-Supply-Chain/index.md
-      - Labs-Instructions/Release-Automation/index.md
+      - Collaborate:
+          - Labs-Instructions/01.Collaborate/index.md
+          - Labs-Instructions/01.Collaborate/01.project-management.md
+          - Labs-Instructions/01.Collaborate/02.implement-features.md
+          - Labs-Instructions/01.Collaborate/03.validate-work.md
+      - Secure the Software Supply Chain:
+          - Labs-Instructions/02.Secure-Software-Supply-Chain/index.md
+      - Automate-Release:
+          - Labs-Instructions/03.Automate-Release/index.md
   - Tetris Game: Tetris/index.html
