--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -139,17 +139,17 @@ nav:
       - Introduction: Labs-Instructions/index.md
       - Collaborate:
           - Labs-Instructions/01.Collaborate/index.md
-          - Labs-Instructions/01.Collaborate/01.project-management.md
-          - Labs-Instructions/01.Collaborate/02.implement-features.md
-          - Labs-Instructions/01.Collaborate/03.validate-work.md
+          - Labs-Instructions/01.Collaborate/01.md
+          - Labs-Instructions/01.Collaborate/02.md
+          - Labs-Instructions/01.Collaborate/03.md
       - Secure the Software Supply Chain:
           - Labs-Instructions/02.Secure-Software-Supply-Chain/index.md
           - Labs-Instructions/02.Secure-Software-Supply-Chain/00.md
           - Labs-Instructions/02.Secure-Software-Supply-Chain/01.md
           - Labs-Instructions/02.Secure-Software-Supply-Chain/02.md
           - Labs-Instructions/02.Secure-Software-Supply-Chain/02-extra.md
-          - Labs-Instructions/02.Secure-Software-Supply-Chain/03.md
-          - Labs-Instructions/02.Secure-Software-Supply-Chain/04.md
       - Automate-Release:
           - Labs-Instructions/03.Automate-Release/index.md
+          - Labs-Instructions/03.Automate-Release/01.md
+          - Labs-Instructions/03.Automate-Release/02.md
   - Tetris Game: Tetris/index.html
