--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -152,4 +152,4 @@ nav:
           - Labs-Instructions/03.Automate-Release/index.md
           - Labs-Instructions/03.Automate-Release/01.md
           - Labs-Instructions/03.Automate-Release/02.md
-  - Tetris Game: Tetris/index.html
+  # - Tetris Game: Tetris/index.html
