--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ theme:
     - content.action.edit
     - content.action.view
     - content.code.copy
+    - content.code.annotate
     - content.tooltips
     - navigation.expand
     - navigation.footer
@@ -97,7 +98,9 @@ markdown_extensions:
       emoji_generator: !!python/name:materialx.emoji.to_svg
 
   - pymdownx.highlight:
-      linenums: true
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
 
   - pymdownx.inlinehilite
   - pymdownx.keys
