--- a/.github/workflows/02.1.continuous.delivery.yml
+++ b/.github/workflows/02.1.continuous.delivery.yml
@@ -10,10 +10,16 @@ jobs:
   version-main-branch-changes:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/create-github-app-token@v1
+        id: generate-app-token
+        with:
+          app-id: ${{ vars.APP_ID_ACTIONS_ASSISTANT }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY_ACTIONS_ASSISTANT }}
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ steps.generate-app-token.outputs.token }}
       - name: Get last version number
         id: get_last_version
         run: |
