--- a/.github/workflows/02.1.continuous.delivery.yml
+++ b/.github/workflows/02.1.continuous.delivery.yml
@@ -30,27 +30,27 @@ jobs:
           echo "Last version is $last_version"
           echo "last_version=$last_version" >> "$GITHUB_OUTPUT"
 
-      - name: Get next version number
-        id: get_next_version
+      - name: Get new version number
+        id: get_new_version
         run: |
           major=$(echo $last_version | cut -d. -f1)
           minor=$(echo $last_version | cut -d. -f2)
           patch=$(echo $last_version | cut -d. -f3)
 
-          next_patch=$((patch+1))
+          new_patch=$((patch+1))
 
-          next_version="$major.$minor.$next_patch"
+          new_version="$major.$minor.$new_patch"
 
-          echo "Next version is $next_version"
-          echo "next_version=$next_version" >> "$GITHUB_OUTPUT"
+          echo "New version is $new_version"
+          echo "new_version=$new_version" >> "$GITHUB_OUTPUT"
         env:
           last_version: ${{ steps.get_last_version.outputs.last_version }}
 
-      - name: Create tag for the next version
+      - name: Create tag for the new version
         run: |
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git tag -a "$next_version" -m "Version $next_version"
-          git push origin "$next_version"
+          git tag -a "$new_version" -m "Version $new_version"
+          git push --force origin "$new_version"
         env:
-          next_version: ${{ steps.get_next_version.outputs.next_version }}-pre-release
+          new_version: ${{ steps.get_new_version.outputs.new_version }}-pre-release
